Fix typo on Outline Project Spec

--- a/doc/outlinespec/beb12_OutlineProjectSpecification.tex
+++ b/doc/outlinespec/beb12_OutlineProjectSpecification.tex
@@ -114,7 +114,7 @@ The following task lists are what can be expected of each aspect of the project.
 %  - Explain these items and highlight when they will be produced
 %  - Take into account your progress
 
-As this project has a fairly tight and fixed deadlight on the temperature questionnaire testing, a lot of the refactoring work will be done as soon and as quickly as possible in order to get the project to a state that could be used.
+As this project has a fairly tight and a fixed deadline on the temperature questionnaire testing, a lot of the refactoring work will be done as soon and as quickly as possible in order to get the project to a state that could be used.
 
 After this initial sprint, the project can then be extended with the additional features described above.
 A rough outline of timeframes for deliverables is below.
