--- a/doc/outlinespec/beb12_OutlineProjectSpecification.tex
+++ b/doc/outlinespec/beb12_OutlineProjectSpecification.tex
@@ -96,7 +96,7 @@ The following task lists are what can be expected of each aspect of the project.
 
 \subsection{Additional Functionality}
 \begin{description}[itemindent=-2em,leftmargin=4em]
-	\item[Internationalisation (i18n)] -- Reimplement i18n system to support additional languages.
+	\item[Internationalisation (i18n)] -- Implement extensible i18n system to fully support Welsh, and additional languages.
 	\item[Relational Database] -- Modify the database schema to be object oriented and relational.
 	\item[Advanced Analytics] -- Create a system which can narrow down responses to criteria (e.g. Find modules with a low satisfaction score which mention `feedback' in comments)
 	\item[Traffic Light Dashboard] -- Have a dashboard showing traffic lights for all modules and departments to detect current issues.
