--- a/doc/finalreport/dissertation.tex
+++ b/doc/finalreport/dissertation.tex
@@ -32,5 +32,10 @@
 	\include{implementation}
 	\include{testing}
 	\include{evaluation}
+	
+	% List all entries regardless of citations
+	\nocite{*}
+	\bibliographystyle{ieeetr}
+	\bibliography{bibliography}
 
 \end{document}
