--- a/doc/finalreport/dissertation.tex
+++ b/doc/finalreport/dissertation.tex
@@ -1,14 +1,27 @@
 \documentclass[abstract,a4paper]{scrreprt} %TODO: If printing, add BCOR=3cm,twoside to options
 
+% Fancy Headers and Chapters
+\usepackage{fancyhdr}
+
+% Date Formatting
+\usepackage[UKenglish]{datetime}
+
 % Images
 \usepackage{graphicx}
 \graphicspath{{img/}}
 
+% Colours
+\usepackage[usenames,dvipsnames]{xcolor}
+\definecolor{AberMaroon}{HTML}{952D2E}
+
 % Hyperlinks
-\usepackage{hyperref}
+\usepackage[colorlinks, urlcolor=AberMaroon, linkcolor=Black, citecolor=AberMaroon]{hyperref}
 
 % Include List of Tables/Figures/Bibliography in Contents
 \usepackage[nottoc]{tocbibind}
+
+% Add appendix environment
+\usepackage[toc,page]{appendix}
 
 \begin{document}
 
@@ -26,6 +39,8 @@
 	% Use Arabic numerals for main content
 	\clearpage
 	\pagenumbering{arabic}
+	% Use fancy page headings for main content
+	\pagestyle{fancy}
 	
 	\include{introduction}
 	\include{design}
@@ -37,5 +52,7 @@
 	\nocite{*}
 	\bibliographystyle{ieeetr}
 	\bibliography{bibliography}
+
+	\include{appendices}
 
 \end{document}
