--- a/doc/finalreport/cover.tex
+++ b/doc/finalreport/cover.tex
@@ -3,15 +3,15 @@
 	
 	~\\
 	
-	\vspace{3cm}
+	\vspace{2cm}
 	\includegraphics[width=0.5\textwidth]{cover/extending_awesome} \\
-	\vspace{1.5cm}
-	{ \large Final Report for CS39440 Major Project }
-	\vspace{1cm}
+	\vspace{2cm}
+	
+	{ \Large Final Report for CS39440 Major Project }
+	\vspace{0.5cm}
 
 	\hrule
-	\vspace{0.5cm}
-	
+	\vspace{0.25cm}
 	\noindent
 	\begin{minipage}[t]{0.4\textwidth}
 		\begin{flushleft} \large
@@ -27,21 +27,26 @@
 			\href{mailto:hmd1@aber.ac.uk}{hmd1@aber.ac.uk}
 		\end{flushright}
 	\end{minipage}
-	
 	\vspace{0.5cm}
 	\hrule
+	\vspace{0.5cm}
+	
+	{ \Large \today }
 
 	\vfill
-
-	{\large \today \\ Version 0.1 (Draft)}
 	
 	\vspace{1cm}
-	This report was submitted as partial fulfilment of a BSc degree in Computer Science (inc Integrated Industrial and Professional Training) [G401] \\
+	This report was submitted as partial fulfilment of a BSc degree in Computer Science \\
+	(inc Integrated Industrial and Professional Training) \textbf{[G401]}
 	\vspace{1cm}
+	
 	\includegraphics[width=0.33\textwidth]{cover/aberystwyth_logo}
 	
+	{ \footnotesize Department of Computer Science, Aberystwyth University } \\	
+	{ \scriptsize Aberystwyth, Ceredigion, SY23 3DB, Wales, UK }
+	
 	% Allow the logo to be closer to the bottom of the page
-	\vspace{-2cm}
+	\vspace{-3cm}
 
 	\end{center}
 \end{titlepage}
