--- a/doc/finalreport/declaration.tex
+++ b/doc/finalreport/declaration.tex
@@ -14,16 +14,32 @@ Signature \hrulefill
 Date \hrulefill
 }
 
-\vspace{2cm}
-
 \section*{Consent to share this work}
 
 In signing below, I hereby agree to this dissertation being made available to other students and academic staff of the Aberystwyth Computer Science Department.
 
-\vspace{2cm}
+\vspace{1cm}
 
 { \Large
 Signature \hrulefill
 \hspace{1cm}
 Date \hrulefill
 }
+
+\section*{Ethics Form Application Number}
+
+The Ethics Form Application Number for this project is: \textbf{1019}.
+
+\vfill
+
+\begin{center}
+	\section*{\center Student Number}
+	\includegraphics[width=0.33\textwidth]{beb12-barcode}
+\end{center}
+
+\vspace{-3cm}
+
+\ifpaper
+	\newpage
+	~
+\fi
