--- a/doc/finalreport/acknowledgements.tex
+++ b/doc/finalreport/acknowledgements.tex
@@ -2,7 +2,13 @@
 ~\\
 \vfill
 
-thanks
+Many thanks to my supervisor Hannah Dee for the guidance and support throughout this project; Sandy for providing a server, and support when it went wrong; and the rest of the staff at Aberystwyth University for the countless hours they put into making it an outstanding place to study.
+
+Thanks to Gareth Williams for providing better Welsh translations than Google Translate ever could, and thanks Keiron O'Shea for the \acs{AWESOME} prototype upon which this project is based.
+
+Thank you to my fellow classmates, flatmates, friends, and family for the continued motivation, ideas, and encouragement; not only over the past few months, but also the past four years through my university course.
+
+But most of all thank you to Bethany Foskett, for being there with sugary snacks, caffeinated beverages, and occasionally being my rubber duck \cite{c2-rubber-ducking}.
 
 \vfill
 ~\\
