Remove appendix cover page from TOC

--- a/doc/finalreport/packages.tex
+++ b/doc/finalreport/packages.tex
@@ -22,4 +22,7 @@
 \usepackage[nottoc]{tocbibind}
 
 % Add appendix environment
-\usepackage[toc,page]{appendix}
+\usepackage[page]{appendix}
+
+% Acronyms
+\usepackage{acronym}
