Add rubber duck debugging to bibliography

--- a/doc/finalreport/bibliography.bib
+++ b/doc/finalreport/bibliography.bib
@@ -1,3 +1,13 @@
+@misc{c2-rubber-ducking,
+	author = {Anonymous},
+	title = {Rubber Ducking},
+	url = {http://c2.com/cgi/wiki?RubberDucking},
+	month = oct,
+	year = {2014},
+	note = {(http://c2.com/cgi/wiki?RubberDucking) Accessed: 2015-04-30},
+	howpublished = {Portland Pattern Repository}
+}
+
 @article{citeulike:13579648,
     abstract = {{This chapter reviews the literature on survey fatigue and summarizes a research project that indicates that administering multiple surveys in one academic year can significantly suppress response rates in later surveys.}},
     author = {Porter, Stephen R. and Whitcomb, Michael E. and Weitzer, William H.},
