--- a/doc/finalreport/bibliography.bib
+++ b/doc/finalreport/bibliography.bib
@@ -1,10 +1,34 @@
+@misc{meq,
+	author = {Anonymous},
+	title = {Module evaluation questionnaires : Student evaluation  : Teaching and Learning Development Unit},
+	url = {http://www.sussex.ac.uk/tldu/ideas/eval/ceq},
+	note = {(\url{http://www.sussex.ac.uk/tldu/ideas/eval/ceq}) Accessed: 2015-05-05},
+	howpublished = {University of Sussex}
+}
+
+@misc{sme,
+	author = {Anonymous},
+	title = {Student Module Evaluation},
+	url = {http://www.westminster.ac.uk/study/current-students/your-studies/student-surveys/student-module-evaluation},
+	note = {(\url{http://www.westminster.ac.uk/study/current-students/your-studies/student-surveys/student-module-evaluation}) Accessed: 2015-05-05},
+	howpublished = {University of Westminster, London}
+}
+
+@misc{qwizdom-student-comprehension,
+	author = {Neil McEwan},
+	title = {Use of Quizdom as a Means of Assessing Student Comprehension of Lecture Material},
+	url = {http://cadair.aber.ac.uk/dspace/bitstream/handle/2160/7419/2009%20-%20McEWAN,%20N.%20-%20TC2%20-%20Use%20of%20Quizdom%20as%20a%20Means%20of%20Assessing%20Student%20Comprehension%20of%20Lecture%20Material.pdf?sequence=1},
+	year = {2009},
+	note = {(\url{http://cadair.aber.ac.uk/dspace/bitstream/handle/2160/7419/2009%20-%20McEWAN,%20N.%20-%20TC2%20-%20Use%20of%20Quizdom%20as%20a%20Means%20of%20Assessing%20Student%20Comprehension%20of%20Lecture%20Material.pdf?sequence=1}) Accessed: 2015-05-05}
+}
+
 @misc{c2-rubber-ducking,
 	author = {Anonymous},
 	title = {Rubber Ducking},
 	url = {http://c2.com/cgi/wiki?RubberDucking},
 	month = oct,
 	year = {2014},
-	note = {(http://c2.com/cgi/wiki?RubberDucking) Accessed: 2015-04-30},
+	note = {(\url{http://c2.com/cgi/wiki?RubberDucking}) Accessed: 2015-04-30},
 	howpublished = {Portland Pattern Repository}
 }
 
