--- a/doc/finalreport/cover.tex
+++ b/doc/finalreport/cover.tex
@@ -36,7 +36,8 @@
 	\vfill
 	
 	\vspace{1cm}
-	This report was submitted as partial fulfilment of a BSc degree in Computer Science \\
+	This report was submitted as partial fulfilment \\
+	of a BSc degree in Computer Science \\
 	(inc Integrated Industrial and Professional Training) \textbf{[G401]}
 	\vspace{1cm}
 	
