--- a/doc/finalreport/design.tex
+++ b/doc/finalreport/design.tex
@@ -1,2 +1,12 @@
 \chapter{Design}
 	
+	After the security audit, it was apparent that the majority of the codebase needed to be refactored in order to make it object-oriented.
+	The decision to rewrite the program was not a light one, by rewriting the program, the scope of extensions to \ac{AWESOME} became much more limited via time constraints.
+	
+	With the rewrite came the opportunity to utilise either a framework or design pattern.
+	
+	\section{OOP MVC Framework}
+	
+	\section{Database Schema}
+	
+	
