--- a/doc/finalreport/dissertation.tex
+++ b/doc/finalreport/dissertation.tex
@@ -38,6 +38,7 @@
 	\pagestyle{fancy}
 
 	\include{introduction}
+	\include{requirements}
 	\include{design}
 	\include{implementation}
 	\include{testing}
