--- a/doc/finalreport/evaluation.tex
+++ b/doc/finalreport/evaluation.tex
@@ -1,2 +1,18 @@
 \chapter{Evaluation}
 	
+	\section{Process}
+	
+	\section{Development Environment}
+	
+	\section{Project Stages}
+	
+	\section{Blog}
+	
+	\section{Degree}
+	
+	\section{Upper Management}
+	
+	\section{Time Management}
+	
+	\section{Future Scope}
+	
