--- a/doc/finalreport/acronyms.tex
+++ b/doc/finalreport/acronyms.tex
@@ -1,6 +1,9 @@
 \chapter*{List of Acronyms}
 \addcontentsline{toc}{chapter}{List of Acronyms}
 
+% To alphabetise list, use
+% sort -fo acronyms-list.tex acronyms-list.tex
+
 \begin{acronym}
-	\acro{AWESOME}{The Aberystwyth Web Evaluation Of Module Experiences}
+	\input{acronyms-list.tex}
 \end{acronym}
