Update final report

--- a/doc/finalreport/appendices.tex
+++ b/doc/finalreport/appendices.tex
@@ -11,12 +11,10 @@
 		\item Test D12 fails as questionnaire respondent tokens aren't created until the moment of sending.
 	\end{itemize}
 	
-	Both of these issues a quick fixes, but are unable to be implemented in time for the dissertation hand-in. They will be fixed in a future version.
+	Both of these issues a quick fixes, but are unable to be implemented in time for the dissertation hand-in.
+	They will be fixed in a future version.
 
 	\begin{sidewaystable}[h]
-	
-		\caption{Acceptance testing table of \acs{AWESOME}'s Admin Dashboard}
-		\label{tbl:awesomeacceptancetestingdashboard}
 				
 		\begin{tabularx}{\textwidth}{l|XXXX|r}
 			ID &
@@ -53,15 +51,13 @@
 			D13	&	Be able to send a survey	&	Click the `Send' button in a survey page	&	A message displaying how many people the survey was sent to	&	A message displaying how many people the survey was sent to	&	\OK \\
 			\bottomrule
 		\end{tabularx}
+	
+		\caption{Acceptance testing table of \acs{AWESOME}'s Admin Dashboard}
+		\label{tbl:awesomeacceptancetestingdashboard}
 		
 	\end{sidewaystable}
 
 	\begin{sidewaystable}
-			
-		\caption{Acceptance testing of \acs{AWESOME}'s Questionnaire}
-		\label{tbl:awesomeacceptancetestingquestionnaire}
-		
-		\vspace{1em}
 		
 		\begin{tabularx}{\textwidth}{l|XXXX|r}
 			ID &
@@ -82,6 +78,9 @@
 			Q5	&	Questionnaire can't be completed twice	&	Re-visit the unique link and try to complete the survey again	&	Receive an error message informing that the questionnaire has already been completed	&	Receive an error message informing that the questionnaire has already been completed	&	\OK \\
 			\bottomrule
 		\end{tabularx}
+			
+		\caption{Acceptance testing of \acs{AWESOME}'s Questionnaire}
+		\label{tbl:awesomeacceptancetestingquestionnaire}
 		
 	\end{sidewaystable}
 	
