--- a/doc/finalreport/bibliography.bib
+++ b/doc/finalreport/bibliography.bib
@@ -1,3 +1,12 @@
+@misc{php-mvc-tutorial,
+	author = {Anant Garg},
+	title = {Write your own PHP MVC Framework},
+	url = {http://anantgarg.com/2009/03/13/write-your-own-php-mvc-framework-part-1/},
+	note = {(\url{http://anantgarg.com/2009/03/13/write-your-own-php-mvc-framework-part-1/}) Accessed: 2015-02-15},
+	month = mar,
+	year = {2009}
+}
+
 @misc{meq,
 	author = {Anonymous},
 	title = {Module evaluation questionnaires : Student evaluation  : Teaching and Learning Development Unit},
