--- a/doc/finalreport/introduction.tex
+++ b/doc/finalreport/introduction.tex
@@ -59,9 +59,6 @@
 	
 	\begin{table}[h]
 		
-		\caption{Module Evaluation methods at Aberystwyth University}
-		\label{tbl:moduleevaluationmethods}
-		
 		\vspace{1em}
 		
 		\begin{tabular*}{\textwidth}{r|ccccccccc|l}
@@ -77,6 +74,11 @@
 		\vspace{1em}
 		
 		\dag~Anonymity may be compromised when completing paper-based form.
+		
+		\vspace{1em}
+		
+		\caption{Module Evaluation methods at Aberystwyth University}
+		\label{tbl:moduleevaluationmethods}
 		
 		\ddag~Manual processing is required in order to analyse the data.
 	\end{table}
