--- a/doc/finalreport/requirements.tex
+++ b/doc/finalreport/requirements.tex
@@ -39,16 +39,18 @@
 		\label{fig:use_case-admin}
 	\end{figure}
 	
-	\autoref{fig:use_case-admin} shows that admins can view surveys, create surveys, add questions to surveys, view more detail about survey such as respondents, response rate, modules, and results. They can also send an email to respondents to remind them to fill in the questionnaire.
+	\autoref{fig:use_case-admin} shows that admins can view surveys, create surveys, add questions to surveys, view more detail about survey such as respondents, response rate, modules, and results.
+	They can also send an email to respondents to remind them to fill in the questionnaire.
 	
 	\newpage
 	
 	\subsubsection{Respondent User Role}
 	
 	\begin{figure}[h]
+		\label{fig:use_case-student}
 		\includegraphics[width=\textwidth]{use_case-respondent}
 		\caption{Respondent use-case diagram.}
-		\label{fig:use_case-student}
 	\end{figure}
 	
-	\autoref{fig:use_case-student} shows that a respondent only has one responsibility in the system, and that is to respond to a survey through a link sent via email. They can only respond once, and submitted answers cannot be seen as it would break the irreversible anonymity of the system.
+	\autoref{fig:use_case-student} shows that a respondent only has one responsibility in the system, and that is to respond to a survey through a link sent via email.
+	They can only respond once, and submitted answers cannot be seen as it would break the irreversible anonymity of the system.
