--- a/doc/finalreport/testing.tex
+++ b/doc/finalreport/testing.tex
@@ -17,7 +17,8 @@
 	User testing was carried out by creating a survey and entering volunteer's \ac{AU} usernames in the student \ac{CSV} data along with sample modules.
 	The first real test through the \ac{AU} servers was sent to staff.
 	This uncovered many issues with the setup of \ac{AWESOME} on the \ac{AU} server, which took some time to fix.
-	After these issues were resolved, an end-of-semester questionnaire was sent out to the vast majority of students in the Computer Science department. From first years, to masters students.
+	After these issues were resolved, an end-of-semester questionnaire was sent out to the vast majority of students in the Computer Science department.
+	From first years, to masters students.
 	
 	User testing revealed some useful information via the feedback form, as well as through a question in the survey which was asked about how easy \ac{AWESOME} was to use.
 	
